# terminal-ace

./: .gitignore  LICENSE  README.md  pyproject.toml
docker/: Dockerfile
scripts/: run_agent.py
terminal_ace/: __init__.py  agent.py  config.py  sandbox.py
terminal_ace.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_agent.py
