[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-ace"
version = "0.1.0"
description = "A state-aware terminal agent for Terminal-Bench Hard"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["terminal_ace*"]